--- a/src/app/pages/settings/change-password/index/change-password-index.component.html
+++ b/src/app/pages/settings/change-password/index/change-password-index.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Ubah Kata Sandi'">
+  <page-content-header [contentTitle]="ls.locale.pengaturan.ubah_kata_sandi.text1">
 
   </page-content-header>
   <!-- / HEADER -->
@@ -8,33 +8,40 @@
     <form [formGroup]="changePassword" autocomplete="off">
       <div class="ayo-main-wrapper mat-bg-white is-half">
         <div fxLayout="row" class="pb-16" fxLayoutAlign="start center">
-          <h2 class="">Ubah Kata Sandi</h2>
+          <h2 class="">{{ ls.locale.pengaturan.ubah_kata_sandi.text1 }}</h2>
         </div>
         <div class="ayo-content-middle pb-48">
 
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" *ngIf="showCurrentPassword" formControlName="old_password" placeholder="Kata Sandi Sekarang">
-              <input matInput type="password" *ngIf="!showCurrentPassword" formControlName="old_password" placeholder="Kata Sandi Sekarang">
-              <button type="button" mat-button matSuffix mat-icon-button (click)="showCurrentPassword = !showCurrentPassword">
+              <input matInput type="text" *ngIf="showCurrentPassword" formControlName="old_password"
+                placeholder="{{ ls.locale.pengaturan.ubah_kata_sandi.text2 }}">
+              <input matInput type="password" *ngIf="!showCurrentPassword" formControlName="old_password"
+                placeholder="{{ ls.locale.pengaturan.ubah_kata_sandi.text2 }}">
+              <button type="button" mat-button matSuffix mat-icon-button
+                (click)="showCurrentPassword = !showCurrentPassword">
                 <mat-icon *ngIf="!showCurrentPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showCurrentPassword">visibility_off</mat-icon>
               </button>
-              <mat-error *ngIf="changePassword.controls['old_password'].hasError('required') && changePassword.controls['old_password'].touched">
-                Kata Sandi Sekarang harus diisi
+              <mat-error
+                *ngIf="changePassword.controls['old_password'].hasError('required') && changePassword.controls['old_password'].touched">
+                {{ ls.locale.pengaturan.ubah_kata_sandi.text2 }} {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
             </mat-form-field>
           </div>
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
-              <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
+              <input matInput type="text" *ngIf="showPassword" formControlName="password"
+                placeholder="{{ ls.locale.pengaturan.ubah_kata_sandi.text3 }}">
+              <input matInput type="password" *ngIf="!showPassword" formControlName="password"
+                placeholder="{{ ls.locale.pengaturan.ubah_kata_sandi.text3 }}">
               <button type="button" mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
                 <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
               </button>
-              <mat-error *ngIf="changePassword.controls['password'].hasError('required') && changePassword.controls['password'].touched">
-                Kata Sandi Baru harus diisi
+              <mat-error
+                *ngIf="changePassword.controls['password'].hasError('required') && changePassword.controls['password'].touched">
+                {{ ls.locale.pengaturan.ubah_kata_sandi.text3 }} {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
             </mat-form-field>
           </div>
@@ -42,22 +49,25 @@
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
-                placeholder="Konfirmasi Kata Sandi Baru">
+                placeholder="{{ ls.locale.pengaturan.ubah_kata_sandi.text4 }}">
               <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
-                placeholder="Konfirmasi Kata Sandi Baru">
-              <button type="button" mat-button matSuffix mat-icon-button (click)="showConfirmPassword = !showConfirmPassword">
+                placeholder="{{ ls.locale.pengaturan.ubah_kata_sandi.text4 }}">
+              <button type="button" mat-button matSuffix mat-icon-button
+                (click)="showConfirmPassword = !showConfirmPassword">
                 <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
               </button>
-              <mat-error *ngIf="changePassword.controls['password_confirmation'].hasError('required') && changePassword.controls['password_confirmation'].touched">
-                Konfirmasi Kata Sandi Baru harus diisi
+              <mat-error
+                *ngIf="changePassword.controls['password_confirmation'].hasError('required') && changePassword.controls['password_confirmation'].touched">
+                {{ ls.locale.pengaturan.ubah_kata_sandi.text4 }} {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
             </mat-form-field>
           </div>
         </div>
         <div class="confirm pt-8 pb-24" fxLayout="row">
-          <button mat-raised-button type="password" type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
-            SIMPAN
+          <button mat-raised-button type="password" type="button" class="confirmation-button" fxFlex="20"
+            (click)="submit()">
+            {{ ls.locale.global.button.save }}
           </button>
         </div>
       </div>
