--- a/src/app/pages/settings/role/create/role-create.component.html
+++ b/src/app/pages/settings/role/create/role-create.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Buat Tingkatan Akses'">
+  <page-content-header [contentTitle]="ls.locale.pengaturan.akses_karyawan.text7">
   </page-content-header>
 
   <div class="content p-24">
@@ -8,10 +8,11 @@
       <form autocomplete="off" [formGroup]="formRolesGroup">
         <div fxLayout="row" class="px-16 pt-24 pb-8" fxLayoutAlign="start center">
           <mat-form-field class="is-light form-primary" fxFlex="50">
-            <input matInput type="text" formControlName="name" placeholder="Nama Tingkatan Akses">
+            <input matInput type="text" formControlName="name"
+              placeholder="{{ ls.locale.pengaturan.akses_karyawan.text8 }}">
             <mat-error
               *ngIf="formRolesGroup.controls['name'].hasError('required') && formRolesGroup.controls['name'].touched">
-              Nama Tingkatan Akses harus diisi
+              {{ ls.locale.pengaturan.akses_karyawan.text8 }} {{ ls.locale.global.messages.mandatory_text }}
             </mat-error>
           </mat-form-field>
         </div>
@@ -179,7 +180,7 @@
       <div class="confirm pl-16 pt-8 pb-24" fxLayout="row">
         <button mat-raised-button type="password" type="button" class="confirmation-button" fxFlex="25"
           (click)="submit()">
-          SIMPAN
+          {{ ls.locale.global.button.save }}
         </button>
       </div>
     </div>
